@@ -4847,8 +4847,7 @@
     aaaXY
 
 # Binary zero in callout string
-#  a  (  ?  C  '  x     z  '  )  b
-/ 61 28 3f 43 27 78 00 7a 27 29 62/hex
+/"a(?C'x" 00 "z')b"/hex
     abcdefgh
 
 /(?(?!)a|b)/
