@@ -7619,8 +7619,7 @@ Callout (8): `code`
  0: aaaX
 
 # Binary zero in callout string
-#  a  (  ?  C  '  x     z  '  )  b
-/ 61 28 3f 43 27 78 00 7a 27 29 62/hex
+/"a(?C'x" 00 "z')b"/hex
     abcdefgh
 Callout (5): 'x\x00z'
 --->abcdefgh
